# knowledge-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  3D_KNOWLEDGE_GRAPH_ARCHITECTURE.md  3D_KNOWLEDGE_GRAPH_IMPLEMENTATION_PLAN.md  3D_QUICK_START_GUIDE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DRIVE_SERVICE_ACCOUNT_FIX.md  FUTURE_FEATURES.md  File System Watcher Feature Design.md  INTEGRATION_VALIDATION_REPORT.md  LOCAL_TESTING_SETUP.md  LOG8_1md  OAUTH2_SETUP_GUIDE.md  PARALLEL_PROCESSING.md  PM_REVIEW_v4.0.0.md  PROCESSING_REPORT.md  PROJECT_OVERVIEW.md  PROMPT_ATTRIBUTION_INTEGRATION.md  PROMPT_AWARE_ARCHITECTURE.md  PROMPT_CACHE_FIX_SUMMARY.md  QUICK_START.md  README.md  RESEARCH_FINDINGS.md  Re-factoringFile  SECURITY.md  SERVICE_ACCOUNT_SOLUTIONS.md  TESTING.md  TEST_ANALYSIS_REPORT.md  animation-improvement-roadmap.md  api_resilience.py  auth_configs.json.example  capture_emails.py  capture_rss.py  capture_websites.py  check_final_status.py  cleanup_summary_v4.0.0.md  (+41 more)
7_17 Content Tag addition/: 01_design_specification.md  README.md
animation-toolkit/: README.md  index.ts  package.json
config/: prompts-consultant-casual.yaml  prompts-gpt5-optimized-original.yaml  prompts-gpt5-optimized.yaml  prompts-gpt5-refined-v1.yaml  prompts-gpt5-refined-v2.yaml  prompts-optimized.yaml  prompts-with-formatting.yaml  prompts.yaml  prompts_old.yaml
desktop-app/: .env.development  .eslintrc.js  .gitignore  3D_FEATURES_COMPLETE.md  3D_VISUALIZATION_IMPROVEMENTS.md  3D_VISUALIZATION_UPDATE.md  ANIMATION_GUIDELINES.md  ANIMATION_IMPLEMENTATION_SUMMARY.md  CONNECTION_SCORING_SYSTEM_SUMMARY.md  CURRENT_STATE_SUMMARY.md  DEBUG_DRIVE_NOTION.md  DECOUPLED_ARCHITECTURE_TEST.md  DEVELOPMENT.md  ENHANCED_3D_RENDERING.md  ENHANCED_DOCUMENT_CARDS_DESIGN.md  ENHANCED_FIELD_MAPPING_SUMMARY.md  FALLBACK_QUALITY_SCORING_IMPLEMENTATION.md  FLOAT32ARRAY_FINAL_FIX.md  FLOAT32ARRAY_FIXES_SUMMARY.md  FLOAT32ARRAY_FIX_FINAL.md  FLOAT32ARRAY_FIX_PLAN.md  FLOAT32ARRAY_FIX_SUMMARY.md  LOCAL_UPLOAD_OAUTH_DESIGN.md  OPTIMAL_CAMERA_INTEGRATION_GUIDE.md  OPTIMAL_CAMERA_POSITIONING_DESIGN.md  PERFORMANCE_OPTIMIZATION_RESULTS.md  PYTHON_FIXES_SUMMARY.md  REVOLUTION_SUMMARY.md  SEARCH_IMPLEMENTATION_GUIDE.md  SECURITY.md  TAG_EXTRACTION_IMPLEMENTATION_SUMMARY.md  VISUAL_PROGRESS.md  forge.config.js  jest.config.js  package-lock.json  package.json  test-graph-rendering.js  tsconfig.json  tsconfig.main.json  tsconfig.renderer.json  (+4 more)
docs/: 3d-ux-design.md  ARCHITECTURE-OVERVIEW.md  CLI-COMMANDS-v5.0.0.md  GPT5-COMPREHENSIVE-TEST-REPORT.md  GPT5-DRIVE-INTEGRATION-GUIDE.md  GPT5-OPTIMIZATION-SUMMARY.md  IMPLEMENTATION-GUIDE.md  MIGRATION-v5.0.0.md  QUICKSTART-GPT5.md  README.md  RELEASE-NOTES-GPT5-TAGGING.md  UAT-DASHBOARD.md  UAT-DEMO-GUIDE.md  UAT-FEEDBACK-FORM.md  UAT-ROLLOUT-CHECKLIST.md  UAT-TEST-PLAN.md  UAT-TEST-SCENARIOS.md  current-state-problems-for-user.md  enrichment-improvements-summary.md  enrichment_extension_visual.md  extending_enrichment.md  formatting-guidelines.md  implementation-summary.md  migration_guide.md  notion-aesthetic-validation.md  notion-prompt-management-diagram.md  notion-prompt-optimization.md  performance-benchmark-report.md  pipeline-prompts-database-schema.md  power-platform-deployment-pipeline.md  prompt-refinement-report.md  prompt_configuration_design.md  sources-database-inventory-report.md  tagging-architecture-design.md  tagging-implementation-plan.md  v4.0.0-documentation-plan.md  v4.0.0-migration-guide.md  v4.0.0-release-guide.md  v4.0.0-technical-architecture.md
gmail_credentials/: .gitignore  GMAIL_SETUP_GUIDE.md  MINIMAL_SETUP.md  README.md  SETUP_TROUBLESHOOTING.md
legacy/: README.md  prompt_aware_blocks.py
migration_backup/: advanced_insights.py  advanced_summarizer.py
results/: gpt5_batch_results_20250927_144553.json  gpt5_drive_processing_20250928_134604.json  gpt5_drive_processing_20250928_134635.json  gpt5_drive_processing_20250928_134725.json  gpt5_drive_processing_20250928_135224.json  gpt5_improved_results_20250927_144751.json  gpt5_pipeline_results_20250927_150044.json  notion_live_results_20250927_150342.json  notion_live_results_20250927_150431.json  notion_pages_20250927_150044.json
scripts/: analyze_prompts.py  assess_drive.py  assess_notion.py  authorize_drive.py  backfill_tags.py  debug_notion_blocks.py  migrate_to_optimized_prompts.py  migrate_to_prompt_aware_formatter.py  run_gpt5_batch.py  run_gpt5_batch_improved.py  run_gpt5_drive.py  run_gpt5_drive_integration.py  run_gpt5_notion_fixed.py  run_gpt5_notion_live.py  run_gpt5_pipeline.py  run_pipeline.py  rvf_ingest.js  rvf_mcp_server.js  test_gpt41_api.py  (+6 more)
(+481 files in other folders)
