[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge-pipeline"
version = "5.0.0"
description = "AI-powered knowledge pipeline: Google Drive PDFs -> OpenAI enrichment -> Notion"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Rivers Cornelson", email = "rivers.cornelson@gmail.com"}
]
keywords = [
    "knowledge-management",
    "ai",
    "openai",
    "notion",
    "google-drive",
    "content-pipeline",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "notion-client>=2.0.0",
    "openai>=1.3.0",
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "pdfminer.six>=20221105",
    "fpdf2>=2.7.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/riverscornelson/knowledge-pipeline"
Repository = "https://github.com/riverscornelson/knowledge-pipeline"
Issues = "https://github.com/riverscornelson/knowledge-pipeline/issues"
LinkedIn = "https://www.linkedin.com/in/rivers-cornelson/"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
knowledge-pipeline = "src.run:main"
knowledge-ingest = "src.ingest:main"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/deprecated/*"]